--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "chroma-js": "2.4.2",
+    "firebase": "^10.12.2",
     "flatpickr": "4.6.13",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -24,7 +25,7 @@
     "react-dom": "18.2.0",
     "react-flatpickr": "3.10.13",
     "react-player": "^2.16.0",
-    "react-router-dom": "6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "15.5.0",
     "web-vitals": "3.3.1"
