--- a/firebase.json
+++ b/firebase.json
@@ -3,15 +3,10 @@
     {
       "source": "functions",
       "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
+      "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log"],
+      "runtime": "nodejs16",
+      "predeploy": [],
+      "region": "nam5"
     }
   ]
 }
