--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@testing-library/user-event": "14.4.3",
     "chroma-js": "2.4.2",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1",
     "flatpickr": "4.6.13",
+    "googleapis": "^140.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-copy-to-clipboard": "5.1.0",
