--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-flatpickr": "3.10.13",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "15.5.0",
     "web-vitals": "3.3.1"
   },
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "ajv": "^7.2.4",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
@@ -68,5 +69,15 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "prettier": "2.8.7"
+  },
+  "overrides": {
+    "schema-utils@4.*": {
+      "ajv": "8.12.0",
+      "ajv-keywords": "5.1.0"
+    },
+    "schema-utils@2.*": {
+      "ajv": "6.12.6",
+      "ajv-keywords": "3.5.2"
+    }
   }
 }
